--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,4 @@
-/* General Styles */
+/* ---------- General Styles ---------- */
 
 html, body, p {
   
@@ -11,6 +11,19 @@ html, body, p {
   
 }
 
+h1 {
+  font-family: 'Futura';
+}
+
+h2, h3, h4, h5 {
+  font-family: 'Futura Hv BT';
+}
+
+
+/* ---------- Index Styles ---------- */
+
+/* Top & Bot bars */
+
 .distill-site-nav {
   background-color: #262c2f;
 }
@@ -19,7 +32,26 @@ html, body, p {
   color: white;
 }
 
-/* Title Section */
+
+/* Google Search */
+
+table#gs_id50 {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+
+.gsc-control-cse {
+  margin-bottom: 0;
+}
+
+.gsc-search-button-v2 {
+  border-color: #272c34;
+  background-color: #404f67;
+}
+
+
+/* ---------- Article Styles ---------- */
+
 
 d-title {
   padding-bottom: 0;
@@ -35,19 +67,9 @@ d-title p {
 }
 
 
-/* Header Styles */
-
-h1 {
-  font-family: 'Futura';
-}
-
-h2, h3, h4, h5 {
-  font-family: 'Futura Hv BT';
-}
 
 
-
-/* Code Styles */
+/* ---------- Code Styles ---------- */
 
 code {
   color: #c46586;
