smallcaps bold styles

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* ---------- General Styles ---------- */
+/* ---------- Global Styles ---------- */
 
 html, body, p {
   
@@ -20,7 +20,23 @@ h2, h3, h4, h5 {
 }
 
 
+/* custom small caps and bold styles */
+
+.sc {
+  font-variant: small-caps;
+  letter-spacing: .1em;
+  font-family: Futura Bk BT;
+}
+
+.bd {
+  font-family: Futura Hv BT;
+  letter-spacing: .05em;
+}
+
+
+
 /* ---------- Index Styles ---------- */
+
 
 /* Top & Bot bars */
 
@@ -50,8 +66,11 @@ table#gs_id50 {
 }
 
 
+
 /* ---------- Article Styles ---------- */
 
+
+/* Title */
 
 d-title {
   padding-bottom: 0;
@@ -67,9 +86,18 @@ d-title p {
 }
 
 
+/* Aside */
+
+aside {
+  width: 200px;
+}
+
+
 
 
 /* ---------- Code Styles ---------- */
+
+/* Inline Code */
 
 code {
   color: #c46586;
@@ -77,9 +105,9 @@ code {
   font-size: 0.8em;
 }
 
-d-code {
-  margin-bottom: 10px;
-}
+
+
+/* Output Chunk */
 
 pre.text-output {
   background-color: #F5F8F9;
@@ -87,10 +115,16 @@ pre.text-output {
   font-size: 0.7em;
 }
 
+/* Code Chunk */
+
 d-article pre {
   font-size: 14px;
   padding-bottom: 17px;
   margin-bottom: 2em;
+}
+
+d-code {
+  margin-bottom: 10px;
 }
 
 
