index page styles

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,4 @@
-/* ---------- General Styles ---------- */
+/* ---------- Global Styles ---------- */
 
 html, body, p {
   
@@ -19,21 +19,28 @@ h2, h3, h4, h5 {
   font-family: 'Futura Hv BT';
 }
 
-/* custom small caps and bold */
+
+/* Small caps */
 
 .sc {
   font-variant: small-caps;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   font-family: Futura Bk BT;
 }
 
-.bd {
-  font-family: Futura Hv BT;
-  letter-spacing: .05em;
+/* Override bold style (Danger Zone) */
+
+p strong {
+    font-family: 'Futura Hv BT';
+    font-weight: normal;
+    font-size: 0.9em;
+    letter-spacing: 0.05em;
 }
 
 
-/* ---------- Index Styles ---------- */
+
+/* ---------- Index Page Styles ---------- */
+
 
 /* Top & Bot bars */
 
@@ -63,8 +70,30 @@ table#gs_id50 {
 }
 
 
+/* Post published date medatada */
+.posts-list .metadata .publishedDate{
+  font-family: 'Roboto Mono Medium';
+}
+
+
+/* Post list caption */
+.posts-list .posts-list-caption{
+  font-family: 'Fira Mono Medium';
+  border-bottom: 5px solid #f3f3f3;
+  padding-bottom: 2rem;
+}
+
+
+/* Sidebar Categories */
+.posts-sidebar {
+  font-family: 'Fira Mono';
+}
+
+
 /* ---------- Article Styles ---------- */
 
+
+/* Title */
 
 d-title {
   padding-bottom: 0;
@@ -80,19 +109,29 @@ d-title p {
 }
 
 
+/* Aside */
+
+aside {
+  width: 200px;
+}
+
+
 
 
 /* ---------- Code Styles ---------- */
+
+/* Inline Code */
 
 code {
   color: #c46586;
   font-family: 'Fira Mono';
   font-size: 0.8em;
+  letter-spacing: 0.03em;
 }
 
-d-code {
-  margin-bottom: 10px;
-}
+
+
+/* Output Chunk */
 
 pre.text-output {
   background-color: #F5F8F9;
@@ -100,10 +139,16 @@ pre.text-output {
   font-size: 0.7em;
 }
 
+/* Code Chunk */
+
 d-article pre {
   font-size: 14px;
   padding-bottom: 17px;
   margin-bottom: 2em;
+}
+
+d-code {
+  margin-bottom: 10px;
 }
 
 
