--- a/styles.css
+++ b/styles.css
@@ -20,22 +20,26 @@ h2, h3, h4, h5 {
 }
 
 
-/* custom small caps and bold styles */
+/* Small caps */
 
 .sc {
   font-variant: small-caps;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   font-family: Futura Bk BT;
 }
 
-.bd {
-  font-family: Futura Hv BT;
-  letter-spacing: .05em;
+/* Override bold style (Danger Zone) */
+
+p strong {
+    font-family: 'Futura Hv BT';
+    font-weight: normal;
+    font-size: 0.9em;
+    letter-spacing: 0.05em;
 }
 
 
 
-/* ---------- Index Styles ---------- */
+/* ---------- Index Page Styles ---------- */
 
 
 /* Top & Bot bars */
@@ -65,6 +69,25 @@ table#gs_id50 {
   background-color: #404f67;
 }
 
+
+/* Post published date medatada */
+.posts-list .metadata .publishedDate{
+  font-family: 'Roboto Mono Medium';
+}
+
+
+/* Post list caption */
+.posts-list .posts-list-caption{
+  font-family: 'Fira Mono Medium';
+  border-bottom: 5px solid #f3f3f3;
+  padding-bottom: 2rem;
+}
+
+
+/* Sidebar Categories */
+.posts-sidebar {
+  font-family: 'Fira Mono';
+}
 
 
 /* ---------- Article Styles ---------- */
@@ -103,6 +126,7 @@ code {
   color: #c46586;
   font-family: 'Fira Mono';
   font-size: 0.8em;
+  letter-spacing: 0.03em;
 }
 
 
