--- a/docs/styles.css
+++ b/docs/styles.css
@@ -41,6 +41,12 @@ p strong {
 
 /* ---------- Index Page Styles ---------- */
 
+/* Publication Date */
+
+.publishedDate {
+  font-size: 1.1em;
+}
+
 
 /* Top & Bot bars */
 
