--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,11 @@ aside {
 }
 
 
+/* Block Quotes */
+blockquote p {
+  margin-bottom: 0;
+}
+
 
 
 /* ---------- Code Styles ---------- */
@@ -170,12 +175,20 @@ d-code {
 /* ---------- ADD-ONS ---------- */
 
 
+/* {rmarkdown} */
+
+.pagedtable-wrapper {
+  margin-bottom: 20px;
+}
+
+
 /* html widgets */
 
 .html-widget {
   margin-top: 1.0em;
   margin-bottom: 1.0em;
 }
+
 
 /* {reactable} */
 
@@ -184,6 +197,7 @@ d-code {
   font-family: 'Roboto Medium';
   background-color: #fbfbfb;
 }
+
 
 /* {xaringanExtra} */
 
