--- a/styles.css
+++ b/styles.css
@@ -2,41 +2,21 @@
 
 html, body, p {
   
-  font-family: 'Futura Bk BT';
-  font-weight: 200;
-  line-height: 1.55; 
+  font-family: 'Roboto';
+  font-weight: 400;
+  line-height: 1.7; 
   font-size: 1em;
   color: #333333;
   font-style: normal;
   
 }
 
-h1 {
-  font-family: 'Futura';
-}
-
-h2, h3, h4, h5 {
-  font-family: 'Futura Hv BT';
-}
-
-
 /* Small caps */
 
 .sc {
   font-variant: small-caps;
   letter-spacing: 0.1em;
-  font-family: Futura Bk BT;
 }
-
-/* Override bold style (Danger Zone) */
-
-p strong {
-    font-family: 'Futura Hv BT';
-    font-weight: normal;
-    font-size: 0.9em;
-    letter-spacing: 0.05em;
-}
-
 
 
 /* ---------- Index Page Styles ---------- */
@@ -110,10 +90,6 @@ d-title h1 {
   line-height: 1.3;
 }
 
-d-title p {
-  font-family: 'Futura Lt BT';
-}
-
 
 /* General */
 
@@ -153,10 +129,10 @@ blockquote p {
 /* Inline Code */
 
 code {
-  color: #c46586;
+  color: #d23c6e;
   font-family: 'Fira Mono';
+  font-weight: 500;
   font-size: 0.8em;
-  letter-spacing: 0.03em;
 }
 
 
@@ -165,7 +141,8 @@ code {
 
 pre.text-output {
   background-color: #F5F8F9;
-  font-family: 'IBM Plex Mono Regular';
+  font-family: 'IBM Plex Mono';
+  font-weight: 500;
   font-size: 0.7em;
 }
 
@@ -178,6 +155,7 @@ d-article pre {
 }
 
 d-code {
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
