--- a/styles.css
+++ b/styles.css
@@ -139,12 +139,12 @@ aside {
   font-family: 'Adelle';
 }
 
-d-code + aside {
-  margin-top: 1em;
+div.sourceCode + aside {
+    margin-top: 1.5em;
 }
 
 aside code {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 
