--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ div.nav-left a.title {
   font-family: Ubuntu;
   font-weight: bold;
   letter-spacing: 1px;
-  background-color: #f9f9f9;
+  background-color: #565656;
+  color: white;
 }
 
 /* Top & Bot bars */
@@ -218,7 +219,7 @@ code span.kw {
   color: #9f1eb1;
 }
 code span.st {
-    color: #148a14;
+  color: #148a14;
 }
 
 /* underline auto-linked functions */
