--- a/docs/styles.css
+++ b/docs/styles.css
@@ -304,3 +304,8 @@ d-footnote-list code {
   border-bottom: 2px solid black;
   margin-bottom: 30px;
 }
+
+.panelset section {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
