--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,10 @@ d-article h2 {
   margin: 3rem 0 1.5rem 0;
 }
 
+div.l-body + h2 {
+  margin-top: 0px;
+}
+
 d-article h3 {
   margin-top: 1em;
   font-size: 28px;
