--- a/docs/styles.css
+++ b/docs/styles.css
@@ -11,6 +11,10 @@ html, body, p {
   
 }
 
+h2, h3 {
+  font-family: 'Roboto Slab'
+}
+
 /* Small caps */
 
 .sc {
@@ -125,7 +129,7 @@ d-title {
 }
 
 d-title h1 {
-  font-family: 'Lora';
+  font-family: 'Adelle';
   line-height: 1.3;
 }
 
