--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ div.nav-left a.title {
 
 /* Post Description */
 
+.posts-list .description h2 {
+  font-family: Adelle;
+}
+
 .description p {
   font-style: italic;
   padding-top: 5px;
