--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
 /* ---------- Global Styles ---------- */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto Slab&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Medium&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');
@@ -304,7 +301,7 @@ d-footnote-list code {
 
 .ReactTable {
   font-size: 14px;
-  font-family: 'Roboto Medium';
+  font-family: 'Roboto Slab';
   background-color: #fbfbfb;
 }
 
@@ -314,7 +311,7 @@ d-footnote-list code {
 .panelset {
   margin-top: 10px;
   --panel-tabs-border-bottom: black;
-  --panel-tab-font-family: 'Roboto Medium';
+  --panel-tab-font-family: 'Roboto Slab';
   --panel-tab-hover-background: #ddd;
   --panel-tab-text-decoration: none;
   border-bottom: 2px solid black;
