--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,11 @@ div.nav-left.title {
   font-family: 'Fira Mono';
 }
 
+.sidebar-section h3 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
 
 /* ---------- Article Styles ---------- */
 
