--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,14 +6,14 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');
 
 @font-face {
-  font-family: Chillax;
+  font-family: 'Chillax';
   src: url("./static/chillax.css")
 }
 
 html, body, p {
   
   font-family: 'Chillax';
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.7; 
   font-size: 1em;
   color: #333333;
@@ -150,6 +150,10 @@ d-title h1 {
   line-height: 1.3;
 }
 
+d-title p {
+  font-weight: 500;
+}
+
 
 /* General */
 
@@ -201,7 +205,7 @@ blockquote p {
 
 /* Footnote margins */
 d-footnote {
-  margin-left: -.3em;
+  margin-left: -.2em;
   margin-right: .1em;
 }
 
