--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,16 +1,15 @@
 /* ---------- Global Styles ---------- */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Atkinson+Hyperlegible&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');
 
 html, body, p {
   
-  font-family: 'Open Sans';
+  font-family: 'Atkinson Hyperlegible';
   font-weight: 400;
-  line-height: 1.7; 
+  line-height: 1.5; 
   font-size: 1em;
   color: #333333;
   font-style: normal;
@@ -50,7 +49,7 @@ div.opener {
 /* Name time */
 
 div.nav-left.title {
-  font-family: 'Roboto';
+  font-family: 'Roboto Slab';
 }
 
 
