--- a/styles.css
+++ b/styles.css
@@ -290,15 +290,19 @@ d-article div.sourceCode pre {
 }
 
 /* R chunk */
+d-article div.sourceCode pre.r {
+  background-color: #faffff;
+}
+
 d-article div.sourceCode pre.r:before {
-    position: absolute;
-    font-size: 1rem;
-    content: 'R';
-    font-family: 'Fira Mono';
-    font-weight: 600;
-    left: -20px;
-    top: -5px;
-    color: #59a2e6;
+  position: absolute;
+  font-size: 1rem;
+  content: 'R';
+  font-family: 'Fira Mono';
+  font-weight: 600;
+  left: -20px;
+  top: -5px;
+  color: #59a2e6;
 }
 
 d-article div.sourceCode pre code {
