--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Atkinson+Hyperlegible&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');
 
 html, body, p {
@@ -304,7 +305,7 @@ a > code {
 
 /* Code Chunk */
 
-d-article div.sourceCode pre.sourceCode {
+d-article div.sourceCode pre {
   position: relative;
   background-color: white;
   padding-top: 10px;
@@ -320,17 +321,17 @@ d-article pre.out-extended {
 }
 
 /* R chunk */
-d-article div.sourceCode pre.sourceCode.r {
+d-article div.sourceCode pre.r {
   background-color: #faffff;
 }
 
 /* Julia chunk */
-d-article div.sourceCode pre.sourceCode.julia {
+d-article div.sourceCode pre.julia {
   background-color: #f8fffb;
   border-left: 5px solid #4A916B;
 }
 
-d-article details div.sourceCode pre.r {
+d-article details div.sourceCode pre {
   background-color: white;
 }
 
